--- a/data.yml
+++ b/data.yml
@@ -16,13 +16,28 @@ links:
   - name: Telegram
     url: https://t.me/makerdao
 overview:
-  overview: |
+  Overview: |
     Maker is a self-described “Multi-Collateral Dai (MCD)” lending protocol designed “to bring stability to the
     cryptocurrency economy.” To achieve this, Maker employs a two-token strategy - MKR and DAI. MKR is the protocol's
     governance token used to vote on various aspects of the protocol, such as technical upgrades, risk parameters, and
     collateral types. In contrast, DAI is the protocol's collateral-backed stablecoin soft-pegged to the US Dollar (USD).
     Minting DAI via Maker entails over-collateralizing a loan with assets approved by MakerDAO via the protocol's
     governance mechanism.
+  Crypto-Collateralized Stablecoins: |
+    DAI is a crypto-collateralized stablecoin created by the MakerDAO system on the Ethereum blockchain.
+    Unlike fiat or commodity-collateralized stablecoins, DAI maintains its dollar-peg through a mix of
+    other cryptocurrencies used as collateral. Users generate DAI by locking these assets into a smart
+    contract, ensuring the stablecoin is over-collateralized to handle asset volatility. Automated mechanisms
+    liquidate the collateral if its value drops too low, maintaining DAI's stability. This method distinguishes
+    DAI from other types of stablecoins.
+  Stability Mechanism: |
+    1. Over-Collateralization: DAI it backed by other cryptocurrencies. Users must lock up more value in
+       collateral than the amount of DAI they wish to mint, creating a buffer against the volatility of
+       the collateral assets.
+    2. Liquidation Process: If the value of the collateral falls below a certain threshold (due to price
+       movements in the crypto market), the MakerDAO system automatically initiates a liquidation process.
+       This involves selling the collateral in an open market auction for DAI to reduce the circulating supply of
+       DAI and ensure that each DAI remains adequately backed by collateral.
 
 overviews:
   - title: Crypto-Collateralized Stablecoins
