--- a/data.yml
+++ b/data.yml
@@ -15,6 +15,7 @@ links:
     url: https://github.com/makerdao
   - name: Telegram
     url: https://t.me/makerdao
+
 overview:
   Overview: |
     Maker is a self-described “Multi-Collateral Dai (MCD)” lending protocol designed “to bring stability to the
@@ -104,6 +105,22 @@ overview:
     for the beginning of Phase One. However, no additional timeline was given for the start of Phase One. Additional details regarding Maker's roadmap
     can be seen here. As of the same date, Maker and the MKR token are fully operational, and Core Units elected by MakerDAO are responsible for
     operating as the protocol's "next-generation workforce".
+
+team:
+  - avatar: https://pbs.twimg.com/profile_images/1564609416409784325/MEOn4pWw_400x400.jpg
+    name: Rune Christensen
+    title: Co-founder and CEO
+    twitter: https://twitter.com/runekek
+    linkedin: https://www.linkedin.com/in/runebentsenchristensen
+  - avatar: https://pbs.twimg.com/profile_images/1699607742049337344/EVQCcUOn_400x400.jpg
+    name: Sam MacPherson
+    title: Co-founder and Lead Developer
+    twitter: https://twitter.com/hexonaut
+  - avatar: https://pbs.twimg.com/profile_images/1446204936392359947/sIpYm-BI_400x400.jpg
+    name: Doo Wan Nam
+    title: Asia Lead
+    twitter: https://twitter.com/doowannam
+    linkedin: https://www.linkedin.com/in/doo-wan-nam-b8943443
 
 information:
   - title: Security Assurance
