--- a/data.yml
+++ b/data.yml
@@ -124,11 +124,16 @@ team:
 
 social media:
   twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
-    tweets: [5, 9, 2]
-    views: [41.54K/8.31K,	87.27K/9.70K, 18.03K/9.01K]
-    likes: [175/35, 401/44, 165/82]
-    comments: [22/4, 62/6, 13/6]
-    shares: [42/8, 90/10, 81/40]
+    - title: Tweets
+      value: [5, 9, 2]
+    - title: Views
+      value: [41.54K/8.31K,	87.27K/9.70K, 18.03K/9.01K]
+    - title: Likes
+      value: [175/35, 401/44, 165/82]
+    - title: Comments
+      value: [22/4, 62/6, 13/6]
+    - title: Shares
+      value: [42/8, 90/10, 81/40]
 
 information:
   - title: Security Assurance
