--- a/data.yml
+++ b/data.yml
@@ -135,6 +135,40 @@ social media:
     - title: Shares
       value: [42/8, 90/10, 81/40]
 
+financial analysis:
+  financial audit:
+  market capitalization and liquidity:
+    - title: Dollar volume (24H)
+      value: $238,544,833.18
+    - title: Market cap	Rank
+      value: 23 ($4,888,486,141.03)
+    - title: FDV
+      value: $4,888,486,141.03
+    - title: Turnover rate
+      value: 4.88%
+    - title: Circulating supply
+      value: 4,892,546,955.00
+    - title: Total supply
+      value: 4,892,546,955.00
+    - title: Max supply
+      value: Unlimited
+    - title: All time high
+      value: $1.059
+    - title: All time high date
+      value: 2020.03.15
+    - title: Down from all time high
+      value: -5.65%
+    - title: All time low
+      value: $0.96699
+    - title: All time low date
+      value: 2023.03.15
+    - title: Up from all time low
+      value: +3.33%
+    - title: Risks of depegging
+      value: Minimum
+  investments:
+  list of investors:
+
 information:
   - title: Security Assurance
     value:
