--- a/data.yml
+++ b/data.yml
@@ -167,6 +167,32 @@ financial analysis:
     - title: Risks of depegging
       value: Minimum
   investments:
+    - round: -
+      amount: $12,000,000
+      valuation: -
+      date: 2017/12
+      investors: |
+        * Andreessen Horowitz
+        * Polychain
+        * FBG Capital
+        * 1confirmation
+        * Distributed Capital Partners
+        * Walden Bridge Capital
+        * Wyre Capital
+        * Scanate
+    - round: -
+      amount: $15,000,000
+      valuation: -
+      date: 2018/09
+      investors: |
+        * Andreessen Horowitz
+    - round: -
+      amount: $27,500,000
+      valuation: -
+      date: 2019/12
+      investors: |
+        * Dragonfly
+        * Paradigm
   list of investors:
 
 information:
