--- a/data.yml
+++ b/data.yml
@@ -167,9 +167,9 @@ financial analysis:
     - title: Risks of depegging
       value: Minimum
   investments:
-    - round: -
+    - round: "-"
       amount: $12,000,000
-      valuation: -
+      valuation: "-"
       date: 2017/12
       investors: |
         * Andreessen Horowitz
@@ -180,15 +180,15 @@ financial analysis:
         * Walden Bridge Capital
         * Wyre Capital
         * Scanate
-    - round: -
+    - round: "-"
       amount: $15,000,000
-      valuation: -
+      valuation: "-"
       date: 2018/09
       investors: |
         * Andreessen Horowitz
-    - round: -
+    - round: "-"
       amount: $27,500,000
-      valuation: -
+      valuation: "-"
       date: 2019/12
       investors: |
         * Dragonfly
