--- a/dai/data.yml
+++ b/dai/data.yml
@@ -3,27 +3,27 @@ description: Dai is a stable, decentralized currency that does not discriminate.
   Any individual or business can realize the advantages of digital money.
 logo: logo.png
 rating: A-
-whitepaper: https://makerdao.com/whitepaper
 links:
   - name: Website
-    url: https://makerdao.com/
+    url: https://makerdao.com
   - name: Twitter
     url: https://twitter.com/makerdao
   - name: Reddit
-    url: https://www.reddit.com/r/makerdao/
+    url: https://www.reddit.com/r/makerdao
   - name: GitHub
     url: https://github.com/makerdao
   - name: Telegram
     url: https://t.me/makerdao
+whitepaper: https://makerdao.com/whitepaper
+overview: |
+  Maker is a self-described “Multi-Collateral Dai (MCD)” lending protocol designed “to bring stability to the
+  cryptocurrency economy.” To achieve this, Maker employs a two-token strategy - MKR and DAI. MKR is the protocol's
+  governance token used to vote on various aspects of the protocol, such as technical upgrades, risk parameters, and
+  collateral types. In contrast, DAI is the protocol's collateral-backed stablecoin soft-pegged to the US Dollar (USD).
+  Minting DAI via Maker entails over-collateralizing a loan with assets approved by MakerDAO via the protocol's
+  governance mechanism.
 
-overview:
-  overview: |
-    Maker is a self-described “Multi-Collateral Dai (MCD)” lending protocol designed “to bring stability to the
-    cryptocurrency economy.” To achieve this, Maker employs a two-token strategy - MKR and DAI. MKR is the protocol's
-    governance token used to vote on various aspects of the protocol, such as technical upgrades, risk parameters, and
-    collateral types. In contrast, DAI is the protocol's collateral-backed stablecoin soft-pegged to the US Dollar (USD).
-    Minting DAI via Maker entails over-collateralizing a loan with assets approved by MakerDAO via the protocol's
-    governance mechanism.
+overviews:
   type of stablecoin: |
     DAI is a crypto-collateralized stablecoin created by the MakerDAO system on the Ethereum blockchain.
     Unlike fiat or commodity-collateralized stablecoins, DAI maintains its dollar-peg through a mix of
@@ -127,7 +127,7 @@ social media:
     - title: Tweets
       value: [5, 9, 2]
     - title: Views
-      value: [41.54K/8.31K,	87.27K/9.70K, 18.03K/9.01K]
+      value: [41.54K/8.31K, 87.27K/9.70K, 18.03K/9.01K]
     - title: Likes
       value: [175/35, 401/44, 165/82]
     - title: Comments
@@ -329,7 +329,7 @@ information:
             proven the concept of a stablecoin but also paved the way for more complex financial systems to be built on blockchain technology.
 
   - title: Governance and Decentralization
-    value: 
+    value:
       - title: Governance Structure
         value: |
           MakerDAO's governance structure is decentralized, meaning it operates based on the collective decision-making of its token holders. The
@@ -363,7 +363,7 @@ information:
           Conversely, when the price of DAI is below $1, the system discourages the creation of more DAI to push the price up, which is done by increasing
           the stability fee. Therefore, the supply of DAI is not predetermined but is constantly changing in response to market conditions. You can find
           the latest amount on https://makerburn.com/#/charts
-    
+
           **MKR** <br />
           The Initial token distribution of MKR is as follows:
           * 69.50% is allocated to Founders & Project
