change name to security and compliance

--- a/dai/data.yml
+++ b/dai/data.yml
@@ -200,7 +200,7 @@ financial analysis:
         * Paradigm
   list of investors:
 
-information:
+security and compliance:
   - title: Security Assurance
     value:
       - title: Smart Contract Audits
