add list of investors

--- a/dai/data.yml
+++ b/dai/data.yml
@@ -1,7 +1,7 @@
 name: DAI
 description: Dai is a stable, decentralized currency that does not discriminate.
   Any individual or business can realize the advantages of digital money.
-logo: logo.png
+logo: assets/logo.png
 rating: A-
 links:
   - name: Website
@@ -199,6 +199,44 @@ financial analysis:
         * Dragonfly
         * Paradigm
   list of investors:
+    - name: 1confirmation
+      logo: 1confirmation.png
+    - name: A.Capital
+      logo: A.Capital.png
+    - name: Andreessen Horowitz
+      logo: Andreessen Horowitz.png
+    - name: Bain Capital Ventures
+      logo: Bain Capital Ventures.png
+    - name: Distributed Capital Partners
+      logo: Distributed Capital Partners.png   
+    - name: Dragonfly
+      logo: Dragonfly.png
+    - name: FBG Capital
+      logo: FBG Capital.png
+    - name: FinTech Collective
+      logo: FinTech Collective.png
+    - name: Hack VC
+      logo: Hack VC.png
+    - name: IDEO CoLab Ventures
+      logo: IDEO CoLab Ventures.png
+    - name: IOSG
+      logo: IOSG.png
+    - name: Inflection
+      logo: Inflection.png
+    - name: ParaFi Capital
+      logo: ParaFi Capital.png
+    - name: Paradigm
+      logo: Paradigm.png
+    - name: Placeholder
+      logo: Placeholder.png
+    - name: Polychain
+      logo: Polychain.png
+    - name: Standard Crypto
+      logo: Standard Crypto.png
+    - name: Uncorrelated
+      logo: Uncorrelated.png
+    - name: Walden Bridge Capital
+      logo: Walden Bridge Capital.png
 
 security and compliance:
   - title: Security Assurance
