add assets folder

--- a/dai/data.yml
+++ b/dai/data.yml
@@ -200,43 +200,43 @@ financial analysis:
         * Paradigm
   list of investors:
     - name: 1confirmation
-      logo: 1confirmation.png
+      logo: assets/1confirmation.png
     - name: A.Capital
-      logo: A.Capital.png
+      logo: assets/A.Capital.png
     - name: Andreessen Horowitz
-      logo: Andreessen Horowitz.png
+      logo: assets/Andreessen Horowitz.png
     - name: Bain Capital Ventures
-      logo: Bain Capital Ventures.png
+      logo: assets/Bain Capital Ventures.png
     - name: Distributed Capital Partners
-      logo: Distributed Capital Partners.png   
+      logo: assets/Distributed Capital Partners.png   
     - name: Dragonfly
-      logo: Dragonfly.png
+      logo: assets/Dragonfly.png
     - name: FBG Capital
-      logo: FBG Capital.png
+      logo: assets/FBG Capital.png
     - name: FinTech Collective
-      logo: FinTech Collective.png
+      logo: assets/FinTech Collective.png
     - name: Hack VC
-      logo: Hack VC.png
+      logo: assets/Hack VC.png
     - name: IDEO CoLab Ventures
-      logo: IDEO CoLab Ventures.png
+      logo: assets/IDEO CoLab Ventures.png
     - name: IOSG
-      logo: IOSG.png
+      logo: assets/IOSG.png
     - name: Inflection
-      logo: Inflection.png
+      logo: assets/Inflection.png
     - name: ParaFi Capital
-      logo: ParaFi Capital.png
+      logo: assets/ParaFi Capital.png
     - name: Paradigm
-      logo: Paradigm.png
+      logo: assets/Paradigm.png
     - name: Placeholder
-      logo: Placeholder.png
+      logo: assets/Placeholder.png
     - name: Polychain
-      logo: Polychain.png
+      logo: assets/Polychain.png
     - name: Standard Crypto
-      logo: Standard Crypto.png
+      logo: assets/Standard Crypto.png
     - name: Uncorrelated
-      logo: Uncorrelated.png
+      logo: assets/Uncorrelated.png
     - name: Walden Bridge Capital
-      logo: Walden Bridge Capital.png
+      logo: assets/Walden Bridge Capital.png
 
 security and compliance:
   - title: Security Assurance
