--- a/dai/data.yml
+++ b/dai/data.yml
@@ -200,7 +200,7 @@ financial analysis:
         * Paradigm
   list of investors:
     - name: 1confirmation
-      logo: assets/1confirmation.png
+      logo: assets/1confirmation.jpg
     - name: A.Capital
       logo: assets/A.Capital.png
     - name: Andreessen Horowitz
@@ -208,27 +208,27 @@ financial analysis:
     - name: Bain Capital Ventures
       logo: assets/Bain Capital Ventures.png
     - name: Distributed Capital Partners
-      logo: assets/Distributed Capital Partners.png   
+      logo: assets/Distributed Capital Partners.jpg   
     - name: Dragonfly
-      logo: assets/Dragonfly.png
+      logo: assets/Dragonfly.jpg
     - name: FBG Capital
-      logo: assets/FBG Capital.png
+      logo: assets/FBG Capital.jpg
     - name: FinTech Collective
-      logo: assets/FinTech Collective.png
+      logo: assets/FinTech Collective.jpg
     - name: Hack VC
-      logo: assets/Hack VC.png
+      logo: assets/Hack VC.jpg
     - name: IDEO CoLab Ventures
       logo: assets/IDEO CoLab Ventures.png
     - name: IOSG
-      logo: assets/IOSG.png
+      logo: assets/IOSG.jpg
     - name: Inflection
-      logo: assets/Inflection.png
+      logo: assets/Inflection.jpg
     - name: ParaFi Capital
-      logo: assets/ParaFi Capital.png
+      logo: assets/ParaFi Capital.jpg
     - name: Paradigm
-      logo: assets/Paradigm.png
-    - name: Placeholder
-      logo: assets/Placeholder.png
+      logo: assets/Paradigm.jpg
+    - name: Placeholder VC
+      logo: assets/Placeholder VC.jpg
     - name: Polychain
       logo: assets/Polychain.png
     - name: Standard Crypto
