fix list of investors

--- a/dai/data.yml
+++ b/dai/data.yml
@@ -232,11 +232,11 @@ financial analysis:
     - name: Polychain
       logo: assets/Polychain.png
     - name: Standard Crypto
-      logo: assets/Standard Crypto.png
+      logo: assets/Standard Crypto.jpg
     - name: Uncorrelated
       logo: assets/Uncorrelated.png
     - name: Walden Bridge Capital
-      logo: assets/Walden Bridge Capital.png
+      logo: assets/Walden Bridge Capital.jpg
 
 security and compliance:
   - title: Security Assurance
