fixed keyword should use underline

--- a/dai/data.yml
+++ b/dai/data.yml
@@ -127,7 +127,7 @@ team:
     twitter: https://twitter.com/doowannam
     linkedin: https://www.linkedin.com/in/doo-wan-nam-b8943443
 
-social media:
+social_media:
   twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
       value: [5, 9, 2]
@@ -140,9 +140,10 @@ social media:
     - title: Shares
       value: [42/8, 90/10, 81/40]
 
-financial analysis:
-  financial audit:
-  market capitalization and liquidity:
+financial_analysis:
+  financial_audit:
+    auditors: N.A.
+  market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
       value: $238,544,833.18
     - title: Market cap	Rank
@@ -198,7 +199,7 @@ financial analysis:
       investors: |
         * Dragonfly
         * Paradigm
-  list of investors:
+  list_of_investors:
     - name: 1confirmation
       logo: assets/1confirmation.jpg
     - name: A.Capital
@@ -208,7 +209,7 @@ financial analysis:
     - name: Bain Capital Ventures
       logo: assets/Bain Capital Ventures.png
     - name: Distributed Capital Partners
-      logo: assets/Distributed Capital Partners.jpg   
+      logo: assets/Distributed Capital Partners.jpg
     - name: Dragonfly
       logo: assets/Dragonfly.jpg
     - name: FBG Capital
@@ -238,7 +239,7 @@ financial analysis:
     - name: Walden Bridge Capital
       logo: assets/Walden Bridge Capital.jpg
 
-security and compliance:
+security_and_compliance:
   - title: Security Assurance
     value:
       - title: Smart Contract Audits
