--- a/usdc/data.yml
+++ b/usdc/data.yml
@@ -88,20 +88,20 @@ details:
       improved support for account abstraction, and further bolstered security for transactions on EVM blockchains.”
 
 team:
-  - avatar: https://pbs.twimg.com/profile_images/1564609416409784325/MEOn4pWw_400x400.jpg
-    name: Rune Christensen
-    title: Co-founder and CEO
-    twitter: https://twitter.com/runekek
-    linkedin: https://www.linkedin.com/in/runebentsenchristensen
-  - avatar: https://pbs.twimg.com/profile_images/1699607742049337344/EVQCcUOn_400x400.jpg
-    name: Sam MacPherson
-    title: Co-founder and Lead Developer
-    twitter: https://twitter.com/hexonaut
-  - avatar: https://pbs.twimg.com/profile_images/1446204936392359947/sIpYm-BI_400x400.jpg
-    name: Doo Wan Nam
-    title: Asia Lead
-    twitter: https://twitter.com/doowannam
-    linkedin: https://www.linkedin.com/in/doo-wan-nam-b8943443
+  - avatar: https://pbs.twimg.com/profile_images/1501707897641779208/cpB2Dk9__400x400.jpg
+    name: Jeremy Allaire
+    title: Co-Founder, CEO and Chairman of the board
+    twitter: https://twitter.com/jerallaire
+    linkedin: https://www.linkedin.com/in/jeremyallaire
+  - avatar: https://media.licdn.com/dms/image/D4E03AQET4PyEcCqhPA/profile-displayphoto-shrink_800_800/0/1686771679988?e=1714608000&v=beta&t=2KBbCQm2EqaNeWWBEJo1pEf3FGBXdkzMOBUX_qq-PWA
+    name: Elisabeth Carpenter
+    title: COO
+    linkedin: https://www.linkedin.com/in/thiscarpenter
+  - avatar: https://pbs.twimg.com/profile_images/1454613885277904904/rKhY89gJ_400x400.jpg
+    name: Dante Disparte
+    title: Chief Strategy Officer, Head of Global Policy
+    twitter: https://twitter.com/ddisparte
+    linkedin: https://www.linkedin.com/in/dantedisparte
 
 social_media:
   twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
