--- a/usdc/data.yml
+++ b/usdc/data.yml
@@ -106,15 +106,15 @@ team:
 social_media:
   twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
     - title: Tweets
-      value: [5, 9, 2]
+      value: [6, 5, 36]
     - title: Views
-      value: [41.54K/8.31K, 87.27K/9.70K, 18.03K/9.01K]
+      value: [384.45K/64.08K, 495.85K/99.17K, 1.52M/42.35K]
     - title: Likes
-      value: [175/35, 401/44, 165/82]
+      value: [1.13K/189.00, 862.00/172.00, 11.46K/318.00]
     - title: Comments
-      value: [22/4, 62/6, 13/6]
+      value: [78.00/13.00, 83.00/16.00, 1.17K/32.00]
     - title: Shares
-      value: [42/8, 90/10, 81/40]
+      value: [369.00/61.00, 292.00/58.00, 3.16K/87.00]
 
 financial_analysis:
   financial_audit:
